--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "vlookup-ondc",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Utility to fetch registry details of an NP using /vlookup API",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluecypher/vlookup-ondc-nodejs.git"
+    "url": "git+https://github.com/sandeepshahi/vlookup-ondc-nodejs.git"
   },
   "keywords": [
     "vlookup",
@@ -18,9 +19,9 @@
   "author": "Sandeep Shahi",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bluecypher/vlookup-ondc-nodejs/issues"
+    "url": "https://github.com/sandeepshahi/vlookup-ondc-nodejs/issues"
   },
-  "homepage": "https://github.com/bluecypher/vlookup-ondc-nodejs#readme",
+  "homepage": "https://github.com/sandeepshahi/vlookup-ondc-nodejs#readme",
   "dependencies": {
     "axios": "^1.4.0",
     "sodium-native": "^4.0.4"
